--- a/lab-03-starter-project-python-main/Dockerfile
+++ b/lab-03-starter-project-python-main/Dockerfile
@@ -1,9 +1,13 @@
 FROM python:3.10-slim-buster
 
+# Dependancies
+COPY requirements/backend.in .
+
+RUN pip install --no-cache-dir -r backend.in
+
+#Code
 COPY . /lab3_python
 
 WORKDIR /lab3_python
-
-RUN pip install --no-cache-dir -r ./requirements/backend.in
 
 CMD ["uvicorn", "spaceship.main:app", "--host=0.0.0.0", "--port=8080"]
