Add numpy dependency and endpoint for matrix

--- a/lab-03-starter-project-python-main/Dockerfile
+++ b/lab-03-starter-project-python-main/Dockerfile
@@ -3,6 +3,8 @@ FROM python:3.10-alpine
 # Dependancies
 COPY requirements/backend.in .
 
+RUN apk add --no-cache lapack-dev g++ gcc musl-dev
+
 RUN pip install --no-cache-dir -r backend.in
 
 #Code
