--- a/lab-03-starter-project-python-main/requirements/backend.in
+++ b/lab-03-starter-project-python-main/requirements/backend.in
@@ -1,10 +1,11 @@
 anyio==3.6.2
-click==8.1.3    
-colorama==0.4.6 
-fastapi==0.95.0 
-h11==0.14.0     
+click==8.1.3
+colorama==0.4.6
+fastapi==0.95.0
+h11==0.14.0
 httptools==0.5.0
-idna==3.4       
+idna==3.4
+numpy==1.24.2
 pydantic==1.10.7
 python-dotenv==1.0.0
 PyYAML==6.0
