Modify Dockerfile for multi-stage build using scratch project

--- a/lab-03-starter-project-golang-main/Dockerfile
+++ b/lab-03-starter-project-golang-main/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.20.2
+FROM golang:1.20.2 AS builder
 
 WORKDIR /lab3_golang
 
@@ -10,7 +10,12 @@ RUN go mod download
 #Code
 COPY . .
 
-RUN go build -o build/fizzbuzz
+RUN CGO_ENABLED=0 go build -ldflags "-w -s -extldflags '-static'" -o build/fizzbuzz
 
-CMD ["./build/fizzbuzz", "serve"]
+FROM scratch
 
+COPY --from=builder /lab3_golang/build/fizzbuzz /fizzbuzz
+
+COPY --from=builder /lab3_golang/templates/index.html /templates/
+
+CMD ["/fizzbuzz", "serve"]
