Modify Dockerfile for multi-stage build using distorless project

--- a/lab-03-starter-project-golang-main/Dockerfile
+++ b/lab-03-starter-project-golang-main/Dockerfile
@@ -12,7 +12,7 @@ COPY . .
 
 RUN CGO_ENABLED=0 go build -ldflags "-w -s -extldflags '-static'" -o build/fizzbuzz
 
-FROM scratch
+FROM gcr.io/distroless/static-debian11
 
 COPY --from=builder /lab3_golang/build/fizzbuzz /fizzbuzz
 
